# Poly

./: .gitignore  CMakeLists.txt  README.md  main.cpp  poly_except.h  poly_type.h  polynomial.cpp  polynomial.h  term.cpp  term.h
gtest/: CMakeLists.txt
include/: poly_except.h  poly_type.h  polynomial.h  template_util.h
include/expr/: absolute_value.h  exponentiation.h  expr_content.h  expression.h  variable.h
include/expr/arithmetic/: addition.h  division.h  multiplication.h  subtraction.h
include/expr/constant/: constant.h  e.h  integer.h  pi.h
include/expr/functions/: absolute_value.h  arccosine.h  arcsine.h  arctangent.h  cosine.h  logarithm.h  sine.h  tangent.h  trigonometric_function.h
src/: CMakeLists.txt  addition.cpp  addition.h  constant.cpp  constant.h  division.cpp  division.h  exponentiation.cpp  exponentiation.h  expression.cpp  expression.h  main.cpp  multiplication.cpp  multiplication.h  polynomial.cpp  polynomial.h  simple_operations.cpp  simple_operations.h  subtraction.cpp  subtraction.h  term.cpp  term.h  variable.cpp  variable.h
src/expr/: absolute_value.cpp  constant.cpp  exponentiation.cpp  expr_content.cpp  expression.cpp  variable.cpp
src/expr/arithmetic/: addition.cpp  division.cpp  multiplication.cpp  subtraction.cpp
src/expr/constant/: constant.cpp  e.cpp  integer.cpp  pi.cpp
src/expr/functions/: absolute_value.cpp  arccosine.cpp  arcsine.cpp  arctangent.cpp  cosine.cpp  logarithm.cpp  sine.cpp  tangent.cpp  trigonometric_function.cpp
src/number/: addition.cpp  addition.h  expression.cpp  expression.h  number.cpp  number.h
tests/: CMakeLists.txt  expr_test.cpp  main.cpp  polynomial_test.cpp  term_test.cpp
